--- a/Travel Project/travel.html
+++ b/Travel Project/travel.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <img src="images/1.jpg" style="width: 20px;height: 20px;">
+        <a href="travel.html"><img src="images/1.jpg" style="width: 40px;height: 40px;margin-top: 15px;"></a>
         <h1><a href="travel.html" class="logo">Tour</a></h1>
         <nav>
             <ul>
                 <li><a href="#" class="bar">Home</a></li>
                 <li><a href="#" class="bar">Best Offers</a></li>
                 <li><a href="#" class="bar">About Us</a></li>
-                <li><a href="contact/contact.html" class="bar">Contact Us</a></li>               
+                <li><a href="contact/contact.html" class="bar" target="_blank">Contact Us</a></li>               
             </ul>
         </nav>
     </header>
